# fluxboard

./: AI_FEATURES_GUIDE.md  BOARD_LABELS_DESIGN.md  BOARD_LABELS_IMPLEMENTATION_STATUS.md  FEATURE_ROADMAP.md  PRESENCE_INTEGRATION.md  README.md  SSE_MIGRATION_DESIGN.md
backend/: .env  .env.example  AUTHENTICATION_IMPLEMENTATION.md  AUTH_TEST_EXAMPLES.md  Cargo.toml  Dockerfile  docker-compose.yml
backend/.sqlx/: query-029e5d96fc7ab0ad8c00e62705b31f6f7b9979d956aeaf91c63c32983bac4b18.json  query-03069c1f4ea8829c5b66190efb70c496db260993de0a12918478bdacf8824f78.json  query-037d6949240281e1eea97eb823a6e53a7fcce6bcab3f6bd9c23d36269b03643f.json  query-0dabf2f5275a0e8bdfec524d35c566c51d8b9de9fd79697052c4984880ec09f7.json  query-141d8da6616c2bdbcf71666a0f1f39559748a3e57a13ce9aaf387def4a557c18.json  query-19244ea17d3f73c28e1f84b3645ca69b24e4cac295dc07b4d7fd2cad1ec6ce80.json  query-1b3a321e0f8047ae2413e227d17ac6c7281e174cd301aa2076f1fdbe4bf49ffb.json  query-1b9d06c48b1ec7de9f2d3b3db2958b976ed28de12e981301708bf0c13c5998cf.json  query-1fe1d85b2251001e9b82c51e7660e401357ff2faa642fbdaaf0537dcaa9dd47d.json  query-265a92c2b246dd1ef00774063247a0cd833fe2720a721e8ded22a68d5d72e4c2.json  query-27622aa0c249bf1e8ee060cb06cb51ddfa86140b3f662a926a99da06cae59a09.json  query-310172b1f30693bb1d6dd6cbc74de8f02a1c57a44fbad0ba179d4976f233ad62.json  query-360f5556ff09a2b0bb095101ba09e332702a87ef6fb77609004aa473bc0a0219.json  query-3de4b399d9b519cbce8b73fd3dd5f0b7627387295a3cbc3d3e00622dd8ec2211.json  query-3f3cbdcde47794acb0d69866f970ccda3f5c814e8811ac5ecd24ca1853c0496e.json  query-468cee7e5aee3d65b35ba0a0ca24c93fb541dad128e82e1126f200cd55c00b4b.json  query-46c7517d83bb4d77b5d60b1b16ada7ced4aca5841e5dcf95dca0078caf019abe.json  query-4bbc3db196127699a349a16ee2ab0686a7c85a908316113e0b2828fe58d9a004.json  query-4d4170bada4be775bb740c091ed4c5d9d7dc3ac38226995618d4a7ac9f89d17f.json  query-55b6fa49f6b0857080a17ee49d2ff44f194d6a1d201b909214ea770bf484617c.json  query-56b2be935a45bfd83a9dbb999681c58f7fc447a36a11b1017e65ec72d1e5b00c.json  query-592132bd538b994403bc26705b120f7867091a89a4f09996d5c8331987008fa0.json  query-5f8f62409415d2ca95108841e985aeb336e36e25c697184bc20c128c0d95b932.json  query-6719ef2d5efcc368060c74d8c8cf7b57de078fc8687842c9e32fce8ca9a8a6e1.json  query-6a4cab25d8c33a3c22cc9160515fa2f930d42b39f2333784eb58e4da202855cf.json  query-6d79ce4ae34087889f6cc0c1f09e2768a9ccbab2f77028c7f6be65c7fd71b50a.json  query-7b6992bf78077034707431c4ad2f20654d4bf55eedb3d93389e37b5df141d25a.json  query-7d782cc6ba53cf92ef12cdff44ab6f37989b9c21a47c68f491839d90d58314b6.json  query-8490289f7716a35607a641e5b9508302012d33fac62977c02347e293f5d89609.json  query-8659b86e3c16283987d12a6c7c974ac0edd407c2ddada539a36f8cb531b11d18.json  query-954b1a73d4fab6d6af175f9bdef80e04406c98895c2f06c32b148ba4dfc0ad90.json  query-9d7be94d033f4e3428eff70185582eeb6baa7b7378d28306172d57951b871b42.json  query-aaed9f48525b320b27815d4c28b1423c1dd7f865b88330101fc996e9b3449351.json  query-ac0d49977d03da56910f482f22faaccaf9cd76be5f3c137d38d7df5d046a4715.json  query-acf25d3d44565613a8c286680bddef6a9c44d18a8dce146323377e90205a63f5.json  query-af90da331027550a067f1b17b3e65daee1c1acaa80bb1b5573cebd3b24d5c1cc.json  query-b5c748854f6824e424cfbbfad908ae1cf5ef0818dc84057984c1344241362840.json  query-bd46ce35e581c686e8ce69e4081b78f6420d2950c1e8965a5e20475da323950a.json  (+18 more)
backend/src/: config.rs  db.rs  error.rs  (+1 more)
presence-service/: .env.example  Cargo.toml  Dockerfile  REDIS_INTEGRATION.md
(+128 files in other folders)
