[package]
name = "fluxboard-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
actix-web = "4.9"
actix-ws = "0.3"
actix-cors = "0.7"

# Async runtime
tokio = { version = "1.41", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "migrate"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
uuid = { version = "1.11", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
dotenvy = "0.15"

# Logging
env_logger = "0.11"
log = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1