[package]
name = "fluxboard-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
actix-web = "4.9"
actix-cors = "0.7"

# Async runtime
tokio = { version = "1.41", features = ["full"] }
tokio-stream = "0.1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "migrate", "macros", "ipnetwork"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
uuid = { version = "1.11", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
dotenvy = "0.15"
futures-util = "0.3"
futures = "0.3"
reqwest = { version = "0.12", features = ["json"] }
hex = "0.4"

# Authentication
argon2 = "0.5"
jsonwebtoken = "9.2"
validator = { version = "0.18", features = ["derive"] }
sha2 = "0.10"

# S3 Integration
aws-config = "1.5"
aws-sdk-s3 = "1.51"
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1.7"
mime = "0.3"

# Logging
env_logger = "0.11"
log = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1