[package]
name = "presence-service"
version = "0.1.0"
edition = "2021"

[lib]
name = "presence_service"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.42", features = ["full"] }
tokio-tungstenite = "0.26"
tungstenite = "0.26"
futures = "0.3"
futures-util = "0.3"
redis = { version = "0.28", features = ["tokio-comp", "connection-manager"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.11", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
anyhow = "1.0"
thiserror = "2.0"
bytes = "1.9"
rand = "0.8"

[dev-dependencies]
criterion = "0.5"
tokio-test = "0.4"

[[bench]]
name = "protocol_bench"
path = "tests/benchmarks/protocol_bench.rs"
harness = false